# python-template

./: .dockerignore  Dockerfile  GEMINI.md  README.md  pyproject.toml  pyproject.toml.jinja
.devcontainer/: Dockerfile  devcontainer.json
config/: logging.yaml
src/: logging_config.py  main.py
src/python_template/: __main__.py
src/{{project_name}}/: __main__.py.jinja  logging_config.py
